--- a/templates/base.html
+++ b/templates/base.html
@@ -85,16 +85,12 @@
             {% if user.is_staff %}
               <a href="/admin/" class="text-gray-900 font-semibold hover:text-gray-600 no-underline py-2 lg:py-0">Admin</a>
             {% endif %}
-            {% if debug %}
-              <a href="{% url 'main:login' %}" class="text-gray-900 font-semibold hover:text-gray-600 no-underline py-2 lg:py-0">Login</a>
-              <a href="{% url 'main:logout' %}" class="text-gray-900 font-semibold hover:text-gray-600 no-underline py-2 lg:py-0">logout</a>
+            {% if user.is_authenticated %}
+              <a href="{% url 'dashboard' %}" class="text-gray-900 font-semibold hover:text-gray-600 no-underline py-2 lg:py-0">Dashboard</a>
+              <a href="{% url 'main:logout' %}" class="text-gray-900 font-semibold hover:text-gray-600 no-underline py-2 lg:py-0">Logout</a>
             {% else %}
-              {% if user.is_authenticated %}
-                <a href="{% url 'main:logout' %}" class="text-gray-900 font-semibold hover:text-gray-600 no-underline py-2 lg:py-0">Logout ({{ user.username }})</a>
-              {% else %}
-                <a href="{% url 'main:login' %}" class="text-gray-900 font-semibold hover:text-gray-600 no-underline py-2 lg:py-0">Login</a>
-                <a href="{% url 'main:register' %}" class="text-gray-900 font-semibold hover:text-gray-600 no-underline py-2 lg:py-0">Register</a>
-              {% endif %}
+              <a href="{% url 'main:login' %}" class="text-gray-900 font-semibold hover:text-gray-600 no-underline py-2 lg:py-0">Login</a>
+              <a href="{% url 'main:register' %}" class="text-gray-900 font-semibold hover:text-gray-600 no-underline py-2 lg:py-0">Register</a>
             {% endif %}
           </nav>
         </div>
